k8s/manifests/base/apps/redisinsight/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
spec:
  selector:
    app: redisinsight
  ports:
    - protocol: TCP
      port: 5540
      targetPort: 5540
