k8s/manifests/base/apps/redisinsight/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-ingress
spec:
  rules:
    - host: redisinsight.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight
                port:
                  number: 5540
